--- a/.github/workflows/test_app.yml
+++ b/.github/workflows/test_app.yml
@@ -33,4 +33,4 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with unitest
       run: |
-        python -m unittest .\tests\test_app.py  
+        python -m unittest discover -s tests -p 'test_*.py'
